@@ -1,3 +1,8 @@
+2005-06-12  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* gdb.mi/mi-syn-frame.exp, gdb.mi/mi2-syn-frame.exp: Don't expect
+	excess MI output after an error.
+
 2005-05-29  Joel Brobecker  <brobecker@adacore.com>
 
 	* gdb.arch/alpha-step.c: New file.
